--- a/index.html
+++ b/index.html
@@ -11,42 +11,42 @@
 
 
     <ul>
-        <p> 2_Formato </p>
+        <p>2_Formato</p>
             <ul>
-                <a  href =" 2_Formato/Actividad1.html " target =" _blank " > Actividad 1 </a> <br>
-                <a  href =" 2_Formato/Actividad2.html " target =" _blank " > Actividad 2 </a> <br>
-                <a  href =" 2_Formato/Actividad3.html " target =" _blank " > Actividad 3 </a> <br>
-                <a  href =" 2_Formato/Actividad4.html " target =" _blank " > Actividad 4 </a> <br>
-                <a  href =" 2_Formato/Actividad5.html " target =" _blank " > Actividad 5 </a> <br>
-                <a  href =" 2_Formato/Actividad6.html " target =" _blank " > Actividad 6 </a> <br>
-                <a  href =" 2_Formato/Actividad7.html " target =" _blank " > Actividad 7 </a> <br>
+                <a href =" 2_Formato/Actividad1.html "target="_blank">Actividad 1</a><br>
+                <a href =" 2_Formato/Actividad2.html "target="_blank">Actividad 2</a><br>
+                <a href =" 2_Formato/Actividad3.html "target="_blank">Actividad 3</a><br>
+                <a href =" 2_Formato/Actividad4.html "target="_blank">Actividad 4</a><br>
+                <a href =" 2_Formato/Actividad5.html "target="_blank">Actividad 5</a><br>
+                <a href =" 2_Formato/Actividad6.html "target="_blank">Actividad 6</a><br>
+                <a href =" 2_Formato/Actividad7.html "target="_blank">Actividad 7</a><br>
             </ul >
-        <p>3_Hipervínculo </p>
+        <p>3_Hipervínculo</p>
             <ul>
-                <a  href =" 3_Hipervinculo/Actividad1.html " target =" _blank " > Actividad 1 </a> <br>
-                <a  href =" 3_Hipervinculo/Activitat2.html " target =" _blank " > Activitat 2 </a> <br>
-                <a  href =" 3_Hipervinculo/Activitat3.html " target =" _blank " > Activitat 3 </a> <br>
+                <a href=" 3_Hipervinculo/Actividad1.html "target="_blank">Actividad 1</a><br>
+                <a href=" 3_Hipervinculo/Activitat2.html "target="_blank">Activitat 2</a><br>
+                <a href=" 3_Hipervinculo/Activitat3.html "target="_blank">Activitat 3</a><br>
             </ul >
-        <p> 4_Listas </p>
+        <p>4_Listas</p>
             <ul>
-                <a  href =" 4_Listas/Actividad1.html " target =" _blank " > Actividad 1 </a> <br>
-                <a  href =" 4_Listas/Actividad2.html " target =" _blank " > Actividad 2 </a> <br>
-                <a  href =" 4_Listas/Actividad3.html " target =" _blank " > Actividad 3 </a> <br>
-                <a  href =" 4_Listas/Actividad4.html " target =" _blank " > Actividad 4 </a> <br>
-                <a  href =" 4_Listas/Activitat5.html " target =" _blank " > Activitat 5 </a> <br>
+                <a href=" 4_Listas/Actividad1.html "target="_blank">Actividad 1</a><br>
+                <a href=" 4_Listas/Actividad2.html "target="_blank">Actividad 2</a><br>
+                <a href=" 4_Listas/Actividad3.html "target="_blank">Actividad 3</a><br>
+                <a href=" 4_Listas/Actividad4.html "target="_blank">Actividad 4</a><br>
+                <a href=" 4_Listas/Activitat5.html "target="_blank">Activitat 5</a><br>
             </ul>
-        <p> 5_Imagenes </p>
+        <p>5_Imagenes</p>
             <ul>
-                <a  href =" 5_Imagenes/Actividad1.html " target =" _blank " > Actividad 1 </a> <br>
-                <a  href =" 5_Imagenes/Actividad2.html " target =" _blank " > Actividad 2 </a> <br>
-                <a  href =" 5_Imagenes/Activitat3.html " target =" _blank " > Activitat 3 </a> <br>
-                <a  href =" 5_Imagenes/Activitat4.html " target =" _blank " > Activitat 4 </a> <br>
+                <a href="p5/p5a1.html"target="_blank">Actividad 1</a><br>
+                <a href="p5/p5a2.html"target="_blank">Actividad 2</a><br>
+                <a href="p5/p5a3.html"target="_blank">Activitat 3</a><br>
+                <a href="p5/p5a4.html"target="_blank">p5a1</a><br>
             </ul>
-        <p> 6_Tablas </p>
+        <p>6_Tablas</p>
             <ul>
-                <a  href =" 6_Tablas/Actividad1.html " target =" _blank " > Actividad 1 </a> <br>
-                <a  href =" 6_Tablas/Actividad2.html " target =" _blank " > Actividad 2 </a> <br>
-                <a  href =" 6_Tablas/Actividad3.html " target =" _blank " > Actividad 3 </a> <br>
+                <a href=" 6_Tablas/Actividad1.html "target="_blank ">Actividad 1</a><br>
+                <a href=" 6_Tablas/Actividad2.html "target="_blank ">Actividad 2</a><br>
+                <a href=" 6_Tablas/Actividad3.html "target="_blank ">Actividad 3</a><br>
             </ul>
 
     </ul>
