--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <juego de caracteres meta  =" UTF-8 ">
     <meta  http-equiv =" X-UA-Compatible " content =" IE=edge " >
     <meta  name =" viewport " content =" ancho=ancho-del-dispositivo, escala-inicial=1.0 " >
-    <title > La meva primera pagina </title>
+    <title >Mi primera pagina</title>
 </head>
 
 <body bgcolor ="green" >
-
 
     <ul>
         <p>2_Formato</p>
