--- a/index.html
+++ b/index.html
@@ -12,56 +12,56 @@
     <ul>
         <p>2_Formato</p>
             <ul>
-                <a href =""target="_blank">Actividad 1</a><br>
-                <a href =""target="_blank">Actividad 2</a><br>
-                <a href =""target="_blank">Actividad 3</a><br>
-                <a href =""target="_blank">Actividad 4</a><br>
-                <a href =""target="_blank">Actividad 5</a><br>
-                <a href =""target="_blank">Actividad 6</a><br>
-                <a href =""target="_blank">Actividad 7</a><br>
+                <a href ="2.-Formato/Actividad1.html"target="_blank">Actividad1</a><br>
+                <a href ="2.-Formato/Actividad2.html"target="_blank">Actividad2</a><br>
+                <a href ="2.-Formato/Actividad3.html"target="_blank">Actividad3</a><br>
+                <a href ="2.-Formato/Actividad4.html"target="_blank">Actividad4</a><br>
+                <a href ="2.-Formato/Actividad5.html"target="_blank">Actividad5</a><br>
+                <a href ="2.-Formato/Actividad6.html"target="_blank">Actividad6</a><br>
+                <a href ="2.-Formato/Actividad7.html"target="_blank">Actividad7</a><br>
             </ul >
         <p>3_Hipervínculo</p>
             <ul>
-                <a href=""target="_blank">Actividad 1</a><br>
-                <a href=""target="_blank">Activitat 2</a><br>
-                <a href=""target="_blank">Activitat 3</a><br>
+                <a href="3.-Hipervínculos/Actividad1.html"target="_blank">Actividad1</a><br>
+                <a href="3.-Hipervínculos/Actividad2.html"target="_blank">Activitat2</a><br>
+                <a href="3.-Hipervínculos/Actividad3.html"target="_blank">Activitat3</a><br>
             </ul >
         <p>4_Listas</p>
             <ul>
-                <a href=""target="_blank">Actividad 1</a><br>
-                <a href=""target="_blank">Actividad 2</a><br>
-                <a href=""target="_blank">Actividad 3</a><br>
-                <a href=""target="_blank">Actividad 4</a><br>
-                <a href=""target="_blank">Activitat 5</a><br>
+                <a href="4.-Listas/Actividad1.html"target="_blank">Actividad1</a><br>
+                <a href="4.-Listas/Actividad2.html"target="_blank">Actividad2</a><br>
+                <a href="4.-Listas/Actividad3.html"target="_blank">Actividad3</a><br>
+                <a href="4.-Listas/Actividad4.html"target="_blank">Actividad4</a><br>
+                <a href="4.-Listas/Actividad5.html"target="_blank">Activitat5</a><br>
             </ul>
         <p>5_Imagenes</p>
             <ul>
-                <a href="p5/p5a1.html"target="_blank">Actividad 1</a><br>
-                <a href="p5/p5a2.html"target="_blank">Actividad 2</a><br>
-                <a href="p5/p5a3.html"target="_blank">Activitat 3</a><br>
-                <a href="p5/p5a4.html"target="_blank">p5a1</a><br>
+                <a href="5.-Imagenes/Actividad1.html"target="_blank">Actividad1</a><br>
+                <a href="5.-Imagenes/Actividad2.html"target="_blank">Actividad2</a><br>
+                <a href="5.-Imagenes/Actividad3.html"target="_blank">Activitat3</a><br>
+                <a href="5.-Imagenes/Actividad4.html"target="_blank">Actividad4</a><br>
             </ul>
         <p>6_Tablas</p>
             <ul>
-                <a href=""target="_blank ">Actividad 1</a><br>
-                <a href=""target="_blank ">Actividad 2</a><br>
-                <a href=""target="_blank ">Actividad 3</a><br>
+                <a href="6.-Tablas/Actividad1.html"target="_blank ">Actividad1</a><br>
+                <a href="6.-Tablas/Actividad2.html"target="_blank ">Actividad2</a><br>
+                <a href="6.-Tablas/Actividad3.html"target="_blank ">Actividad3</a><br>
             </ul>
         <p>7</p>
             <ul>
-                <a href=""target="_blank ">Actividad 2</a><br> 
-                <a href=""target="_blank ">Actividad 2</a><br>
-                <a href=""target="_blank ">Actividad 2</a><br>
+                <a href="7.-Formularios/Actividad1.html"target="_blank">Actividad1</a><br> 
+                <a href="7.-Formularios/Actividad2.html"target="_blank">Actividad2</a><br>
+                <a href="7.-Formularios/Actividad3.html"target="_blank">Actividad3</a><br>
             </ul>
         <p>8</p>
             <ul>
-                <a href="p8/p8a1.html"target="_blank ">Actividad 2</a><br>
-                <a href="p8/p8a2.html"target="_blank ">Actividad 2</a><br>
+                <a href="8.-Multimedia/Actividad1.html"target="_blank ">Actividad1</a><br>
+                <a href="8.-Multimedia/Actividad2.html"target="_blank ">Actividad2</a><br>
             </ul>
         <p>9</p>
             <ul>
-                <a href="p9/p9a1.html"target="_blank ">Actividad 2</a><br>
-                <a href="p9/p9a2.html"target="_blank ">Actividad 2</a><br>
+                <a href="9.-Contenido/Actividad1.html"target="_blank ">Actividad 1</a><br>
+                <a href="9.-Contenido/Actividad2.html"target="_blank ">Actividad 2</a><br>
             </ul>
 
     </ul>
