--- a/3.-Hipervínculos/Actividad1.html
+++ b/3.-Hipervínculos/Actividad1.html
@@ -12,6 +12,6 @@
     <h2>¿Quien somos?</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ornare lorem eget enim mattis aliquam. Curabitur quis sapien mattis, euismod nisl eu, dapibus orci. Phasellus feugiat, leo id pellentesque tristique, enim ex porttitor lectus, non posuere metus tellus tempor eros. Donec at varius nunc. Proin vitae leo tortor. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed mi justo, tincidunt at.</p>
     <a href="http://restaurantechinoshanghai.es/" target="_blank">Descubre quienes somos</a><br>
-    <a href="http://restaurantechinoshanghai.es/menu/" target="_blank">Menu del dia</a>
+    <a href="http://restaurantechinoshanghai.es/menu/" target="_blank">
 </body>
 </html>
