--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title >Mi primera pagina</title>
 </head>
 
-<body bgcolor ="green" >
+<body bgcolor ="skyblue" >
 
     <ul>
-        <p>2_Formato</p>
+        <p>2.-Formato</p>
             <ul>
                 <a href ="2.-Formato/Actividad1.html"target="_blank">Actividad1</a><br>
                 <a href ="2.-Formato/Actividad2.html"target="_blank">Actividad2</a><br>
@@ -20,48 +20,48 @@
                 <a href ="2.-Formato/Actividad6.html"target="_blank">Actividad6</a><br>
                 <a href ="2.-Formato/Actividad7.html"target="_blank">Actividad7</a><br>
             </ul >
-        <p>3_Hipervínculo</p>
+        <p>3.-Hipervínculo</p>
             <ul>
                 <a href="3.-Hipervínculos/Actividad1.html"target="_blank">Actividad1</a><br>
-                <a href="3.-Hipervínculos/Actividad2.html"target="_blank">Activitat2</a><br>
-                <a href="3.-Hipervínculos/Actividad3.html"target="_blank">Activitat3</a><br>
+                <a href="3.-Hipervínculos/Actividad2.html"target="_blank">Actividad2</a><br>
+                <a href="3.-Hipervínculos/Actividad3.html"target="_blank">Actividad3</a><br>
             </ul >
-        <p>4_Listas</p>
+        <p>4.-Listas</p>
             <ul>
                 <a href="4.-Listas/Actividad1.html"target="_blank">Actividad1</a><br>
                 <a href="4.-Listas/Actividad2.html"target="_blank">Actividad2</a><br>
                 <a href="4.-Listas/Actividad3.html"target="_blank">Actividad3</a><br>
                 <a href="4.-Listas/Actividad4.html"target="_blank">Actividad4</a><br>
-                <a href="4.-Listas/Actividad5.html"target="_blank">Activitat5</a><br>
+                <a href="4.-Listas/Actividad5.html"target="_blank">Actividad5</a><br>
             </ul>
-        <p>5_Imagenes</p>
+        <p>5.-Imagenes</p>
             <ul>
                 <a href="5.-Imagenes/Actividad1.html"target="_blank">Actividad1</a><br>
                 <a href="5.-Imagenes/Actividad2.html"target="_blank">Actividad2</a><br>
-                <a href="5.-Imagenes/Actividad3.html"target="_blank">Activitat3</a><br>
+                <a href="5.-Imagenes/Actividad3.html"target="_blank">Actividad3</a><br>
                 <a href="5.-Imagenes/Actividad4.html"target="_blank">Actividad4</a><br>
             </ul>
-        <p>6_Tablas</p>
+        <p>6.-Tablas</p>
             <ul>
                 <a href="6.-Tablas/Actividad1.html"target="_blank ">Actividad1</a><br>
                 <a href="6.-Tablas/Actividad2.html"target="_blank ">Actividad2</a><br>
                 <a href="6.-Tablas/Actividad3.html"target="_blank ">Actividad3</a><br>
             </ul>
-        <p>7</p>
+        <p>7.-Formularios</p>
             <ul>
                 <a href="7.-Formularios/Actividad1.html"target="_blank">Actividad1</a><br> 
                 <a href="7.-Formularios/Actividad2.html"target="_blank">Actividad2</a><br>
                 <a href="7.-Formularios/Actividad3.html"target="_blank">Actividad3</a><br>
             </ul>
-        <p>8</p>
+        <p>8.-Multimedia</p>
             <ul>
                 <a href="8.-Multimedia/Actividad1.html"target="_blank ">Actividad1</a><br>
                 <a href="8.-Multimedia/Actividad2.html"target="_blank ">Actividad2</a><br>
             </ul>
-        <p>9</p>
+        <p>9.-Contenido</p>
             <ul>
-                <a href="9.-Contenido/Actividad1.html"target="_blank ">Actividad 1</a><br>
-                <a href="9.-Contenido/Actividad2.html"target="_blank ">Actividad 2</a><br>
+                <a href="9.-Contenido/Actividad1.html"target="_blank ">Actividad1</a><br>
+                <a href="9.-Contenido/Actividad2.html"target="_blank ">Actividad2</a><br>
             </ul>
 
     </ul>
