--- a/4.-Listas/Actividad2.html
+++ b/4.-Listas/Actividad2.html
@@ -10,9 +10,35 @@
     <h1>Series epicas</h1>
     <ul>
         <li>Dibujos animados</li>
-            <li>Simpsons</li>
-            <li>Futurama</li>
-            <li>Desencanto</li>
+            <ul>
+                <li>Simpsons</li>
+                <li>Futurama</li>
+                <li>Desencanto</li>
+            </ul>
+    </ul>
+    <ul>
+        <li>Drama</li>
+        <ul>
+            <li>Breaking Bad</li>
+            <li>Chernobyl</li>
+            <li>Mad Men</li>
+        </ul>
+    </ul>
+    <ul>
+        <li>Ciencia Ficcion</li>
+        <ul>
+            <li>Expediente X</li>
+            <li>Star Trek</li>
+            <li>Stargate</li>
+        </ul>
+    </ul>
+    <ul>
+        <li>Comedia</li>
+        <ul>
+            <li>30 Rock</li>
+            <li>Seinfeld</li>
+            <li>Friends</li>
+        </ul>
     </ul>
     
 </body>
