--- a/6.-Tablas/Actividad1.html
+++ b/6.-Tablas/Actividad1.html
@@ -15,9 +15,19 @@
                 <th>Año</th>
             </tr>
             <tr>
-                <td><img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fpics.filmaffinity.com%2FMulan-247098384-large.jpg&tbnid=aXzlQix7KziKfM&vet=12ahUKEwic4sbr7ML-AhV6mCcCHXSaC88QMygBegUIARDnAQ..i&imgrefurl=https%3A%2F%2Fwww.filmaffinity.com%2Fes%2Ffilm890974.html&docid=SxWyYkqGIpiQaM&w=800&h=1200&q=mulan&ved=2ahUKEwic4sbr7ML-AhV6mCcCHXSaC88QMygBegUIARDnAQ" height="150px" width="100px"></td>
+                <td><img src="../Imagenes/mulan.jpeg" height="150px" width="100px"></td>
                 <td>Mulan</td>
                 <td>1998</td>
+            </tr>
+            <tr>
+                <td><img src="../Imagenes/descarga.jpeg" height="150" width="100"></td>
+                <td>El Rey León</td>
+                <td>1994</td>
+            </tr>
+            <tr>
+                <td><img src="../Imagenes/aladin.jpeg" height="150" width="100"></td>
+                <td>Aladdin</td>
+                <td>1992</td>
             </tr>
         </thead>
     </table>
