--- a/7.-Formularios/Actividad1.html
+++ b/7.-Formularios/Actividad1.html
@@ -7,9 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+    <form method="post" action="">
     <h1>Formulario</h1>
-    <fieldset>
-        <legend>Formulario de contacto</legend>
+        <legend>Formulario de contacto</legend><br>
         <label>
             Nombre
             <input type="text" name="Nombre">
@@ -28,8 +28,6 @@
         <button type="submit">
             Enviar
         </button>
-
-
-    </fieldset>
+    </form>
 </body>
 </html>
