--- a/7.-Formularios/Actividad3.html
+++ b/7.-Formularios/Actividad3.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
+    <form method="post" action="">
     <H1>Registrarse</H1>
-    <fieldset>
         <label>
             Correo electronico
             <input required="" type="text" name="Correo electronico">
@@ -38,6 +38,6 @@
             Siguiente
         </button>
 
-    </fieldset>
+    </form>
 </body>
 </html>
