--- a/7.-Formularios/Actividad2.html
+++ b/7.-Formularios/Actividad2.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <form method="post" action="">
     <h1>Tienda de altavoces</h1>
     <fieldset>
         <legend>Altavoces</legend>
@@ -39,5 +40,6 @@
         </button>
 
     </fieldset>
+    </form>
 </body>
 </html>
