--- a/2.-Formato/Actividad2.html
+++ b/2.-Formato/Actividad2.html
@@ -12,5 +12,6 @@
     <h2>Titulo con h2</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin scelerisque vestibulum laoreet. Donec ac orci fringilla, bibendum lacus et, dapibus quam. Nulla lacinia augue et ipsum varius, ut elementum nunc porttitor. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Phasellus quis elit faucibus dolor molestie pharetra non at est. Aenean quis interdum justo. Nullam placerat, erat.</p>
     <h2>Titulo con h2</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin scelerisque vestibulum laoreet. Donec ac orci fringilla, bibendum lacus et, dapibus quam. Nulla lacinia augue et ipsum varius, ut elementum nunc porttitor. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Phasellus quis elit faucibus dolor molestie pharetra non at est. Aenean quis interdum justo. Nullam placerat, erat.</p>
 </body>
 </html>
