--- a/joder.html
+++ b/joder.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Document</title>ç
     <link rel="stylesheet" type="text/css" href="/reglas.css">
 </head>
 <body>
-    <h1>Periodicos</h1>
     <ul>
-        <li>El mundo Today</li>
-        <li>People</li>
-        <li>USA Today</li>
-        <li>Times</li>
+        <li class="si">peras</li>
+        <li id="no">manzanas</li>
+        <li class="q">sandias</li>
+        <li calss="t">kiwi</li>
+        <li id="e">melocoton</li>
+        <li id="a">mango</li>
+        <li class="b">naranja</li>
     </ul>
 </body>
 </html>
