--- a/6.-Medidas/Actividad1.html
+++ b/6.-Medidas/Actividad1.html
@@ -10,13 +10,11 @@
 <body>
     <h1 class="titulo">Lavadora dual</h1>
     <h2 class="subtitulo">Agitador y apertura superior</h2>
-    <span>
-    <img src="/Imagenes/lavadora.jpg">
-    </span>
-    <span>
+    <div class="container">
+    <img src="/Imagenes/lavadora.jpg" height="300" width="200">
     <p>Model: NTW4516FW</p>
     <p>SKU: 5369600</p>
     <p>494,99 euros</p>
-    </span>
+    </div>
 </body>
 </html>
