--- a/prueba.html
+++ b/prueba.html
@@ -1,44 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+  <head>
+    <title>Menú con Botones</title>
     <link rel="stylesheet" type="text/css" href="/reglas.css">
-</head>
-<body>
-    <div class="chat">
-        <div class="mensaje enviado">
-          <div class="avatar">
-            <img src="avatar1.jpg" alt="Avatar 1">
-          </div>
-          <div class="contenido">
-            <div class="info">
-              <span class="nombre">Usuario 1</span>
-              <span class="fecha">20 de mayo, 2023</span>
-            </div>
-            <div class="texto">
-              <p>Hola, ¿cómo estás?</p>
-            </div>
-          </div>
-        </div>
-        
-        <div class="mensaje recibido">
-          <div class="avatar">
-            <img src="avatar2.jpg" alt="Avatar 2">
-          </div>
-          <div class="contenido">
-            <div class="info">
-              <span class="nombre">Usuario 2</span>
-              <span class="fecha">21 de mayo, 2023</span>
-            </div>
-            <div class="texto">
-              <p¡Hola! Estoy bien, ¿y tú?</p>
-            </div>
-          </div>
-        </div>
-      </div>
-      
+  </head>
+  <body>
+    <header>
+      <nav>
+        <ul class="menu">
+          <li><a href="#">Botón 1</a></li>
+          <li><a href="#">Botón 2</a></li>
+          <li><a href="#">Botón 3</a></li>
+          <li><a href="#">Botón 4</a></li>
+        </ul>
+      </nav>
+    </header>
+
 </body>
 </html>
