--- a/prueba.html
+++ b/prueba.html
@@ -13,7 +13,7 @@
           <li><a href="#">Botón 1</a></li>
           <li><a href="#">Botón 2</a></li>
           <li><a href="#">Botón 3</a></li>
-          <li><a href="#">Botón 4</a></li>
+          <li><a href="/5.-Imagenes/">Botón 4</a></li>
         </ul>
       </nav>
     </header>
