--- a/Porfoli/Inicio.html
+++ b/Porfoli/Inicio.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <ul class="Navegación">
-                <li><a href="../Porfoli/">Inicio</a></li>
+                <li><a href="#">Inicio</a></li>
                 <li><a href="/Porfoli/">Practicas</a></li>
                 <li><a href="/Porfoli/Formulario.html">Contacto</a></li>
                 <li><a href="#">inventar</a></li>
@@ -28,3 +28,4 @@
     </footer>
 </body>
 </html>
+
