--- a/prueba.html
+++ b/prueba.html
@@ -7,16 +7,36 @@
     <link rel="stylesheet" type="text/css" href="/reglas.css">
   </head>
   <body>
-    <header>
-      <nav>
-        <ul class="menu">
-          <li><a href="#">Botón 1</a></li>
-          <li><a href="#">Botón 2</a></li>
-          <li><a href="#">Botón 3</a></li>
-          <li><a href="/5.-Imagenes/">Botón 4</a></li>
-        </ul>
-      </nav>
-    </header>
-
+    <div class="container">
+      <h1>Formulario de Contacto</h1>
+      <form>
+        <div class="form-group">
+          <label for="name">Nombre:</label>
+          <input type="text" id="name" name="name" required>
+        </div>
+  
+        <div class="form-group">
+          <label for="email">Email:</label>
+          <input type="email" id="email" name="email" required>
+        </div>
+  
+        <div class="form-group">
+          <label for="subject">Asunto:</label>
+          <input type="text" id="subject" name="subject" required>
+        </div>
+  
+        <div class="form-group">
+          <label for="message">Mensaje:</label>
+          <textarea id="message" name="message" rows="4" required></textarea>
+        </div>
+  
+        <div class="form-group">
+          <label for="newsletter">Suscribirse al boletín:</label>
+          <input type="checkbox" id="newsletter" name="newsletter">
+        </div>
+  
+        <input type="submit" value="Enviar">
+      </form>
+    </div>
 </body>
 </html>
