--- a/7.-Formularios/Actividad3.html
+++ b/7.-Formularios/Actividad3.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <form method="post" action="">
-    <H1>Formulario de Contacto</H1>
+    <H1>Registrarse</H1>
         <label>
             Correo electronico
             <input required="" type="text" name="Correo electronico">
