--- a/Porfoli/Practicas.html
+++ b/Porfoli/Practicas.html
@@ -5,8 +5,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="/Porfoli/Practicas.css">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <ul class="Navegación">
+                <li><a href="/Porfoli/Inicio.html">Inicio</a></li>
+                <li><a href="/Porfoli/Practicas.html">Practicas</a></li>
+                <li><a href="/Porfoli/Formulario.html">Contacto</a></li>
+                <li><a href="#">inventar</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+    <div class="Horizontal">
+        <div class="column">
+            <h1>Actividades HTML</h1>
+            <a href="/2.-Formato/">Enlace 1</a>
+            <a href="/3.-Hipervínculos/">Enlace 2</a>
+            <a href="/4.-Listas/">Enlace 1</a>
+            <a href="/5.-Imagenes/">Enlace 1</a>
+            <a href="/6.-Tablas/">Enlace 1</a>
+            <a href="/7.-Formularios/">Enlace 1</a>
+            <a href="/8.-Multimedia/">Enlace 1</a>
+            <a href="/9.-Contenido/">Enlace 1</a>
+            <a href="/11.-Interactivo/">Enlace 1</a>
+        </div>
+        <div class="column">
+            <H1>Actividades CSS</H1>
+            <a href="/3.-Selectores/">Enlace 1</a>
+            <a href="/4.-Color/">Enlace 2</a>
+            <a href="/5.-Texto/">Enlace 1</a>
+            <a href="/6.-Medidas/">Enlace 1</a>
+            <a href="/7.-imagenes/">Enlace 1</a>
+            <a href="/8.-display/">Enlace 1</a>
+            <a href="/9.-Margen/">Enlace 1</a>
+        </div>
+    </div>
+    </main>
 </body>
 </html>
