--- a/Porfoli/Inicio.html
+++ b/Porfoli/Inicio.html
@@ -11,8 +11,8 @@
     <header>
         <nav>
             <ul class="Navegación">
-                <li><a href="#">Inicio</a></li>
-                <li><a href="/Porfoli/">Practicas</a></li>
+                <li><a href="/Porfoli/Inicio.html">Inicio</a></li>
+                <li><a href="/Porfoli/Practicas.html">Practicas</a></li>
                 <li><a href="/Porfoli/Formulario.html">Contacto</a></li>
                 <li><a href="#">inventar</a></li>
             </ul>
