--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 
 <body bgcolor ="skyblue" >
-
+    <div class="column">
     <ul>
+        <h1>HTML</h1>
         <p>2.-Formato</p>
             <ul>
                 <a href ="2.-Formato/Actividad1.html"target="_blank">Actividad1</a><br>
@@ -66,6 +67,7 @@
 
     </ul>
     <ul>
+        <H1>CSS</H1>
         <p>3.-Selectores</p>
         <ul>
             <a href ="/3.-Selectores/Actividad1.css"target="_blank">Actividad1</a><br>
@@ -109,5 +111,6 @@
             <a href="/9.-Margen/Actividad2.css"target="_blank ">Actividad2</a><br>
             <a href="/9.-Margen/Actividad3.css"target="_blank ">Actividad3</a><br>
     </ul>
+</div>
 </body>
 </html>
