--- a/Porfoli/Inicio.html
+++ b/Porfoli/Inicio.html
@@ -14,13 +14,17 @@
                 <li><a href="/Porfoli/Inicio.html">Inicio</a></li>
                 <li><a href="/Porfoli/Practicas.html">Practicas</a></li>
                 <li><a href="/Porfoli/Formulario.html">Contacto</a></li>
-                <li><a href="#">inventar</a></li>
+                <li><a href="/Porfoli/Inventar.html">inventar</a></li>
             </ul>
         </nav>
     </header>
     
     <main>
-
+        <h1>Nombre</h1>
+        <p>Mi nombre es Aaron Mubiaed</p>
+        <img src="#">
+        <h2>Vocacion</h2>
+        <p>Mi vocaión es llegar a ser programador de una gran empresa de informática</p>
     </main>
     
     <footer>
