--- a/Porfoli/Practicas.html
+++ b/Porfoli/Practicas.html
@@ -14,7 +14,7 @@
                 <li><a href="/Porfoli/Inicio.html">Inicio</a></li>
                 <li><a href="/Porfoli/Practicas.html">Practicas</a></li>
                 <li><a href="/Porfoli/Formulario.html">Contacto</a></li>
-                <li><a href="#">inventar</a></li>
+                <li><a href="/Porfoli/Inventar.html">inventar</a></li>
             </ul>
         </nav>
     </header>
