--- a/index.html
+++ b/index.html
@@ -111,8 +111,9 @@
             <a href="/9.-Margen/Actividad2.css"target="_blank ">Actividad2</a><br>
             <a href="/9.-Margen/Actividad3.css"target="_blank ">Actividad3</a><br>
     </ul>
+    <p>Portfoli</p>
     <ul>
-        <li><a href="/Porfoli/">Portfoli</a></li>
+        <a href="/Porfoli/">Portfoli</a>
     </ul>
 </div>
 </body>
