--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
         <H1>CSS</H1>
         <p>3.-Selectores</p>
         <ul>
-            <a href ="/3.-Selectores/Actividad1.css"target="_blank">Actividad2</a><br>
-            <a href ="/3.-Selectores/Actividad2.css"target="_blank">Actividad2</a><br>
+            <a href ="/3.-Selectores/"target="_blank">Actividad2</a><br>
         </ul >
     <p>4.-Color</p>
         <ul>
