--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </ul>
     <p>Portfoli</p>
     <ul>
-        <a href="/Porfoli/">Portfoli</a>
+        <a href="/Portfoli/">Portfoli</a>
     </ul>
 </div>
 </body>
