--- a/index.html
+++ b/index.html
@@ -80,40 +80,26 @@
     <p>4.-Color</p>
         <ul>
             <a href="/4.-Color/Actividad1.css" target="_blank">Actividad1</a><br>
-            <a href="/4.-Color/Actividad2.css" target="_blank">Actividad2</a><br>
-            <a href="/4.-Color/Actividad3.css" target="_blank">Actividad3</a><br>
         </ul >
     <p>5.-Texto</p>
         <ul>
             <a href="/5.-Texto/Actividad1.css" target="_blank">Actividad1</a><br>
-            <a href="/5.-Texto/Actividad2.css" target="_blank">Actividad2</a><br>
-            <a href="/5.-Texto/Actividad3.css" target="_blank">Actividad3</a><br>
-            <a href="/5.-Texto/Actividad4.css" target="_blank">Actividad4</a><br>
-            <a href="/5.-Texto/Actividad5.css" target="_blank">Actividad5</a><br>
         </ul>
     <p>6.-Medidas</p>
         <ul>
             <a href="/6.-Medidas/Actividad1.css" target="_blank">Actividad1</a><br>
-            <a href="/6.-Medidas/Actividad2.css" target="_blank">Actividad2</a><br>
-            <a href="/6.-Medidas/Actividad3.css" target="_blank">Actividad3</a><br>
-            <a href="/6.-Medidas/Actividad4.css" target="_blank">Actividad4</a><br>
         </ul>
     <p>7.-Imagenes</p>
         <ul>
             <a href="/7.-imagenes/Actividad1.css" target="_blank ">Actividad1</a><br>
-            <a href="/7.-imagenes/Actividad2.css" target="_blank ">Actividad2</a><br>
         </ul>
     <p>8.-display</p>
         <ul>
             <a href="/8.-display/Actividad1.css" target="_blank">Actividad1</a><br> 
-            <a href="/8.-display/Actividad2.css" target="_blank">Actividad2</a><br>
-            <a href="/8.-display/Actividad3.css" target="_blank">Actividad3</a><br>
         </ul>
     <p>9.-Margen</p>
         <ul>
-            <a href="/9.-Margen/Actividad1.css" target="_blank ">Actividad1</a><br>
-            <a href="/9.-Margen/Actividad2.css" target="_blank ">Actividad2</a><br>
-            <a href="/9.-Margen/Actividad3.css" target="_blank ">Actividad3</a><br>
+            <a href="/9.-Margen/Actividad1.html" target="_blank ">Actividad1</a><br>
     </ul>
     <p>Portfoli</p>
     <ul>
