--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         </ul>
     <p>9.-Margen</p>
         <ul>
-            <a href="/9.-Margen/Actividad1.html" target="_blank ">Actividad1</a><br>
+            <a href="/9.-Margen/"target="_blank">Actividad1</a><br>
     </ul>
     <p>Portfoli</p>
     <ul>
