--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
             </ul>
         <p>11.-Interactivo</p>
             <ul>
-                <a href="/11.-Interactivo/Actividad1.html"target="_blank">Actividad1</a>
-                <a href="/11.-Interactivo/Actividad2.html"target="_blank">Actividad2</a>
+                <a href="/11.-Interactivo/Actividad1.html"target="_blank">Actividad1</a><br>
+                <a href="/11.-Interactivo/Actividad2.html"target="_blank">Actividad2</a><br>
             </ul>
 
     </ul>
@@ -79,23 +79,23 @@
         </ul >
     <p>4.-Color</p>
         <ul>
-            <a href="/4.-Color/Actividad1.css" target="_blank">Actividad1</a><br>
+            <a href="/4.-Color/" target="_blank">Actividad1</a><br>
         </ul >
     <p>5.-Texto</p>
         <ul>
-            <a href="/5.-Texto/Actividad1.css" target="_blank">Actividad1</a><br>
+            <a href="/5.-Texto/" target="_blank">Actividad1</a><br>
         </ul>
     <p>6.-Medidas</p>
         <ul>
-            <a href="/6.-Medidas/Actividad1.css" target="_blank">Actividad1</a><br>
+            <a href="/6.-Medidas/" target="_blank">Actividad1</a><br>
         </ul>
     <p>7.-Imagenes</p>
         <ul>
-            <a href="/7.-imagenes/Actividad1.css" target="_blank ">Actividad1</a><br>
+            <a href="/7.-imagenes/" target="_blank ">Actividad1</a><br>
         </ul>
     <p>8.-display</p>
         <ul>
-            <a href="/8.-display/Actividad1.css" target="_blank">Actividad1</a><br> 
+            <a href="/8.-display/" target="_blank">Actividad1</a><br> 
         </ul>
     <p>9.-Margen</p>
         <ul>
@@ -103,7 +103,7 @@
     </ul>
     <p>Portfoli</p>
     <ul>
-        <a href="/Porfoli/Inicio.html">Portfoli</a>
+        <a href="/Porfoli/">Portfoli</a>
     </ul>
 </div>
 </body>
