--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     </ul>
     <p>Portfoli</p>
     <ul>
-        <a href="/Porfoli/">Portfoli</a>
+        <a href="/Porfoli/Inicio.html">Portfoli</a>
     </ul>
 </div>
 </body>
