--- a/index.html
+++ b/index.html
@@ -75,31 +75,46 @@
         <H1>CSS</H1>
         <p>3.-Selectores</p>
         <ul>
-            <a href="/3.-Selectores/"target="_blank">Actividad2</a><br>
+            <a href="/3.-Selectores/Actividad1.html"target="_blank">Actividad1</a><br>
+            <a href="/3.-Selectores/Actividad2.html"target="_blank">Actividad2</a><br>
         </ul >
     <p>4.-Color</p>
         <ul>
-            <a href="/4.-Color/" target="_blank">Actividad1</a><br>
+            <a href="/4.-Color/Actividad1.html" target="_blank">Actividad1</a><br>
+            <a href="/4.-Color/Actividad2.html" target="_blank">Actividad1</a><br>
+            <a href="/4.-Color/Actividad3.html" target="_blank">Actividad1</a><br>
         </ul >
     <p>5.-Texto</p>
         <ul>
-            <a href="/5.-Texto/" target="_blank">Actividad1</a><br>
+            <a href="/5.-Texto/Actividad1.html" target="_blank">Actividad1</a><br>
+            <a href="/5.-Texto/Actividad2.html" target="_blank">Actividad2</a><br>
+            <a href="/5.-Texto/Actividad3.html" target="_blank">Actividad3</a><br>
+            <a href="/5.-Texto/Actividad4.html" target="_blank">Actividad4</a><br>
+            <a href="/5.-Texto/Actividad5.html" target="_blank">Actividad5</a><br>
         </ul>
     <p>6.-Medidas</p>
         <ul>
-            <a href="/6.-Medidas/" target="_blank">Actividad1</a><br>
+            <a href="/6.-Medidas/Actividad1.html" target="_blank">Actividad1</a><br>
+            <a href="/6.-Medidas/Actividad2.html" target="_blank">Actividad2</a><br>
+            <a href="/6.-Medidas/Actividad3.html" target="_blank">Actividad3</a><br>
+            <a href="/6.-Medidas/Actividad4.html" target="_blank">Actividad4</a><br>
         </ul>
     <p>7.-Imagenes</p>
         <ul>
-            <a href="/7.-imagenes/" target="_blank ">Actividad1</a><br>
+            <a href="/7.-imagenes/Actividad1.html" target="_blank">Actividad1</a><br>
+            <a href="/7.-imagenes/Actividad2.html" target="_blank">Actividad2</a><br>
         </ul>
     <p>8.-display</p>
         <ul>
-            <a href="/8.-display/" target="_blank">Actividad1</a><br> 
+            <a href="/8.-display/Actividad1.html" target="_blank">Actividad1</a><br> 
+            <a href="/8.-display/Actividad2.html" target="_blank">Actividad2</a><br>
+            <a href="/8.-display/Actividad3.html" target="_blank">Actividad3</a><br>
         </ul>
     <p>9.-Margen</p>
         <ul>
-            <a href="/9.-Margen/"target="_blank">Actividad1</a><br>
+            <a href="/9.-Margen/Actividad1.html" target="_blank">Actividad1</a><br>
+            <a href="/9.-Margen/Actividad2.html" target="_blank">Actividad2</a><br>
+            <a href="/9.-Margen/Actividad3.html" target="_blank">Actividad3</a><br>
     </ul>
     <p>Portfoli</p>
     <ul>
