--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     </ul>
     <p>Portfoli</p>
     <ul>
-        <a href="/Porfoli/Inicio.html">Portfoli</a>
+        <a href="/Porfoli/Inicio.html">Porfoli</a>
     </ul>
 </div>
 </body>
