--- a/Actividades.html
+++ b/Actividades.html
@@ -65,8 +65,8 @@
             </ul>
         <p>11.-Interactivo</p>
             <ul>
-                <a href="11.-Interactivo/Actividad1.html/" target="_blank">Actividad1</a><br>
-                <a href="11.-Interactivo/Actividad2.html/" target="_blank">Actividad2</a><br>
+                <a href="11.-Interactivo/Actividad1.html" target="_blank">Actividad1</a><br>
+                <a href="11.-Interactivo/Actividad2.html" target="_blank">Actividad2</a><br>
             </ul>
     </ul>
 </body>
