--- a/Porfoli/index.html
+++ b/Porfoli/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="/Porfoli/Practicas.css">
+    <link rel="stylesheet" type="text/css" href="/Porfoli/index.css">
 </head>
 <body>
     <header>
         <nav>
             <ul class="Navegación">
                 <li><a href="/Porfoli/Inicio.html">Inicio</a></li>
-                <li><a href="/Porfoli/Practicas.html">Practicas</a></li>
+                <li><a href="/Porfoli/index.html">Practicas</a></li>
                 <li><a href="/Porfoli/Formulario.html">Contacto</a></li>
                 <li><a href="/Porfoli/Inventar.html">inventar</a></li>
             </ul>
