--- a/Porfoli/index.html
+++ b/Porfoli/index.html
@@ -23,8 +23,8 @@
         <div class="column">
             <h1>Actividades HTML</h1>
             <a href="/2.-Formato/">Formato</a>
-            <a href="/3.-Hipervínculos/">-Hipervínculo</a>
-            <a href="/4.-Listas/">-Listas</a>
+            <a href="/3.-Hipervínculos/">Hipervínculo</a>
+            <a href="/4.-Listas/">Listas</a>
             <a href="/5.-Imagenes/">Imagenes</a>
             <a href="/6.-Tablas/">Tablas</a>
             <a href="/7.-Formularios/">Formularios</a>
