--- a/Porfoli/Inicio.html
+++ b/Porfoli/Inicio.html
@@ -21,10 +21,10 @@
     
     <main>
         <h1>Nombre</h1>
-        <p>Mi nombre es Aaron Mubiaed</p>
-        <img src="#">
+        <p class="Description">Mi nombre es Aaron Mubiaed</p>
+        <img src="/Imagenes/yo.jpg" height="230px" width="230px">
         <h2>Vocacion</h2>
-        <p>Mi vocaión es llegar a ser programador de una gran empresa de informática</p>
+        <p class="Vocacion">Mi vocaión es llegar a ser programador de una gran empresa de informática</p>
     </main>
     
     <footer>
