--- a/Porfoli/Inicio.html
+++ b/Porfoli/Inicio.html
@@ -12,7 +12,7 @@
         <nav>
             <ul class="Navegación">
                 <li><a href="/Porfoli/Inicio.html">Inicio</a></li>
-                <li><a href="/Porfoli/index.html">Practicas</a></li>
+                <li><a href="/Porfoli/index.html">Index</a></li>
                 <li><a href="/Porfoli/Formulario.html">Contacto</a></li>
                 <li><a href="/Porfoli/Inventar.html">inventar</a></li>
             </ul>
