--- a/Porfoli/Inicio.html
+++ b/Porfoli/Inicio.html
@@ -12,7 +12,7 @@
         <nav>
             <ul class="Navegación">
                 <li><a href="/Porfoli/Inicio.html">Inicio</a></li>
-                <li><a href="/Porfoli/index.html">Index</a></li>
+                <li><a href="/Porfoli/actividades.html">Index</a></li>
                 <li><a href="/Porfoli/Formulario.html">Contacto</a></li>
                 <li><a href="/Porfoli/Inventar.html">inventar</a></li>
             </ul>
@@ -22,7 +22,7 @@
     <main>
         <h1>Nombre</h1>
         <p class="Description">Mi nombre es Aaron Mubiaed</p>
-        <img src="/Imagenes/yo.jpg" height="230px" width="230px">
+        <img src="Imagenes/yo.jpg" height="230px" width="230px">
         <h2>Vocacion</h2>
         <p class="Vocacion">Mi vocaión es llegar a ser programador de una gran empresa de informática</p>
     </main>
