--- a/portfoli/Inventar.html
+++ b/portfoli/Inventar.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <ul class="Navegación">
-                <li><a href="Index.html">Inicio</a></li>
+                <li><a href="index.html">Inicio</a></li>
                 <li><a href="porfoli/actividades.html">Index</a></li>
                 <li><a href="porfoli/Formulario.html">Contacto</a></li>
                 <li><a href="porfoli/Inventar.html">inventar</a></li>
