--- a/Index.html
+++ b/Index.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="/Porfoli/Inicio.css">
+    <link rel="stylesheet" type="text/css" href="porfoli/index.css">
 </head>
 <body>
     <header>
         <nav>
             <ul class="Navegación">
-                <li><a href="/Porfoli/Inicio.html">Inicio</a></li>
-                <li><a href="/Porfoli/actividades.html">Index</a></li>
-                <li><a href="/Porfoli/Formulario.html">Contacto</a></li>
-                <li><a href="/Porfoli/Inventar.html">inventar</a></li>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="porfoli/actividades.html">Index</a></li>
+                <li><a href="porfoli/Formulario.html">Contacto</a></li>
+                <li><a href="porfoli/Inventar.html">inventar</a></li>
             </ul>
         </nav>
     </header>
