--- a/portfoli/Inventar.html
+++ b/portfoli/Inventar.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="porfoli/inventar.css">
+    <link rel="stylesheet" type="text/css" href="portfoli/inventar.css">
 </head>
 <body>
     <header>
         <nav>
             <ul class="Navegación">
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="porfoli/actividades.html">Index</a></li>
-                <li><a href="porfoli/Formulario.html">Contacto</a></li>
-                <li><a href="porfoli/Inventar.html">inventar</a></li>
+                <li><a href="portfoli/actividades.html">Index</a></li>
+                <li><a href="portfoli/Formulario.html">Contacto</a></li>
+                <li><a href="portfoli/Inventar.html">inventar</a></li>
             </ul>
         </nav>
       </header>
