--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <p class="Description">Mi nombre es Aaron Mubiaed</p>
         <img src="Imagenes/yo.jpg" height="230px" width="230px">
         <h2>Vocacion</h2>
-        <p class="Vocacion">Mi vocaión es llegar a ser programador de una gran empresa de informática</p>
+        <p class="Vocacion">Mi vocación es llegar a ser programador de una gran empresa de informática</p>
     </main>
     
     <footer>
