--- a/portfoli/Formulario.html
+++ b/portfoli/Formulario.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="portfoli/Formulario.css">
+    <link rel="stylesheet" type="text/css" href="portfoli/formulario.css">
 </head>
 <body>
     <header>
@@ -13,8 +13,8 @@
             <ul class="Navegación">
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="portfoli/actividades.html">Index</a></li>
-                <li><a href="portfoli/Formulario.html">Contacto</a></li>
-                <li><a href="portfoli/Inventar.html">inventar</a></li>
+                <li><a href="portfoli/formulario.html">Contacto</a></li>
+                <li><a href="portfoli/inventar.html">inventar</a></li>
             </ul>
         </nav>
       </header>
