--- a/portfoli/actividades.html
+++ b/portfoli/actividades.html
@@ -13,8 +13,8 @@
             <ul class="Navegación">
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="portfoli/actividades.html">Index</a></li>
-                <li><a href="portfoli/Formulario.html">Contacto</a></li>
-                <li><a href="portfoli/Inventar.html">inventar</a></li>
+                <li><a href="portfoli/formulario.html">Contacto</a></li>
+                <li><a href="portfoli/inventar.html">inventar</a></li>
             </ul>
         </nav>
     </header>
