--- a/portfoli/Formulario.html
+++ b/portfoli/Formulario.html
@@ -14,7 +14,7 @@
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="portfoli/actividades.html">Index</a></li>
                 <li><a href="portfoli/formulario.html">Contacto</a></li>
-                <li><a href="portfoli/inventar.html">inventar</a></li>
+                <li><a href="portfoli/inventar.html">Inventar</a></li>
             </ul>
         </nav>
       </header>
