--- a/portfoli/Inventar.html
+++ b/portfoli/Inventar.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <ul class="Navegación">
-                <li><a href="index.html">Inicio</a></li>
+                <li><a href="../index.html">Inicio</a></li>
                 <li><a href="portfoli/actividades.html">Index</a></li>
                 <li><a href="portfoli/formulario.html">Contacto</a></li>
                 <li><a href="portfoli/inventar.html">Inventar</a></li>
