--- a/portfoli/actividades.html
+++ b/portfoli/actividades.html
@@ -12,9 +12,9 @@
         <nav>
             <ul class="Navegación">
                 <li><a href="../index.html">Inicio</a></li>
-                <li><a href="portfoli/actividades.html">Index</a></li>
-                <li><a href="portfoli/formulario.html">Contacto</a></li>
-                <li><a href="portfoli/inventar.html">Inventar</a></li>
+                <li><a href="actividades.html">Index</a></li>
+                <li><a href="formulario.html">Contacto</a></li>
+                <li><a href="inventar.html">Inventar</a></li>
             </ul>
         </nav>
     </header>
