--- a/portfoli/actividades.html
+++ b/portfoli/actividades.html
@@ -22,25 +22,25 @@
     <div class="Horizontal">
         <div class="column">
             <h1>Actividades HTML</h1>
-            <a href="/2.-Formato/">Formato</a>
-            <a href="/3.-Hipervínculos/">Hipervínculo</a>
-            <a href="/4.-Listas/">Listas</a>
-            <a href="/5.-Imagenes/">Imagenes</a>
-            <a href="/6.-Tablas/">Tablas</a>
-            <a href="/7.-Formularios/">Formularios</a>
-            <a href="/8.-Multimedia/">Multimedia</a>
-            <a href="/9.-Contenido/">Contenido</a>
-            <a href="/11.-Interactivo/">Interactivo</a>
+            <a href="2.-Formato/">Formato</a>
+            <a href="3.-Hipervínculos/">Hipervínculo</a>
+            <a href="4.-Listas/">Listas</a>
+            <a href="5.-Imagenes/">Imagenes</a>
+            <a href="6.-Tablas/">Tablas</a>
+            <a href="7.-Formularios/">Formularios</a>
+            <a href="8.-Multimedia/">Multimedia</a>
+            <a href="9.-Contenido/">Contenido</a>
+            <a href="11.-Interactivo/">Interactivo</a>
         </div>
         <div class="column">
             <H1>Actividades CSS</H1>
-            <a href="/3.-Selectores/">Selectores</a>
-            <a href="/4.-Color/">Color</a>
-            <a href="/5.-Texto/">Texto</a>
-            <a href="/6.-Medidas/">Medidas</a>
-            <a href="/7.-imagenes/">Imagenes</a>
-            <a href="/8.-display/">Display</a>
-            <a href="/9.-Margen/">Margen</a>
+            <a href="3.-Selectores/">Selectores</a>
+            <a href="4.-Color/">Color</a>
+            <a href="5.-Texto/">Texto</a>
+            <a href="6.-Medidas/">Medidas</a>
+            <a href="7.-imagenes/">Imagenes</a>
+            <a href="8.-display/">Display</a>
+            <a href="9.-Margen/">Margen</a>
         </div>
     </div>
     </main>
